fix: frame nutrition photo cutting top whitespace

--- a/src/nutrition-photo.css
+++ b/src/nutrition-photo.css
@@ -5,8 +5,8 @@
   color: transparent;
   background-color: #ffffff;
   background-image: url('/clinica/nutricionista.jpeg');
-  background-size: auto 112%;
-  background-position: center;
+  background-size: auto 118%;
+  background-position: center bottom;
   background-repeat: no-repeat;
   box-shadow: inset 0 0 0 1px rgba(7, 82, 73, 0.08);
 }
